merubah isi text about me dan merubah foto pada my project

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p class="pKiri">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptate vel, excepturi aperiam nam temporibus? Ea cum nemo numquam magnam!</p>
+            <p class="pKiri">Hallo. Saya merupakan lulusan S1 Teknik Informatika dari Universitas Pelita Bangsa Cikarang.</p>
           </div>
           <div class="col-md-4">
-            <p class="pKanan">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, dolores odit delectus ipsum autem blanditiis dolore quidem similique exercitationem sapiente dolorum dolorem! Corporis, earum dicta.</p>
+            <p class="pKanan">Saya seorang programmer yang berfokus pada pengembangan website menggunakan javascript dan typescript beserta library dan frameworknya.</p>
           </div>
         </div>
       </div>
@@ -93,41 +93,41 @@
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/1.jpg" class="card-img-top" alt="Projects 1" />
+              <img src="img/projects/Company Profile.png" class="card-img-top" alt="Projects 1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Website Company Profile.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/2.jpg" class="card-img-top" alt="Projects 2" />
+              <img src="img/projects/Landing Page.png" class="card-img-top" alt="Projects 2" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Website Landing Page Sederhana.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/3.jpg" class="card-img-top" alt="Projects 3" />
+              <img src="img/projects/Undangan Digital.png" class="card-img-top" alt="Projects 3" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Website Undangan Pernikahan Digital.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/4.jpg" class="card-img-top" alt="Projects 4" />
+              <img src="img/projects/Web Kopi.png" class="card-img-top" alt="Projects 4" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Website Coffee.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/projects/5.jpg" class="card-img-top" alt="Projects 5" />
+              <img src="img/projects/Kalkulator Sederhana.png" class="card-img-top" alt="Projects 5" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Program Kalkulator Sederhana javascript.</p>
               </div>
             </div>
           </div>
