Menambahkan link github pada project

--- a/index.html
+++ b/index.html
@@ -94,40 +94,45 @@
           <div class="col-md-4 mb-3">
             <div class="card">
               <img src="img/projects/Company Profile.png" class="card-img-top" alt="Projects 1" />
-              <div class="card-body">
+              <div class="card-body text-center">
                 <p class="card-text">Website Company Profile.</p>
+                <i class="bi bi-github"> <a href="https://github.com/abizars10/Abizars-Company.git" target="_blank">Source Code</a></i>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
               <img src="img/projects/Landing Page.png" class="card-img-top" alt="Projects 2" />
-              <div class="card-body">
+              <div class="card-body text-center">
                 <p class="card-text">Website Landing Page Sederhana.</p>
+                <i class="bi bi-github"> <a href="https://github.com/abizars10/Web-Landing.git" target="_blank">Source Code</a></i>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
               <img src="img/projects/Undangan Digital.png" class="card-img-top" alt="Projects 3" />
-              <div class="card-body">
+              <div class="card-body text-center">
                 <p class="card-text">Website Undangan Pernikahan Digital.</p>
+                <i class="bi bi-github"> <a href="https://github.com/abizars10/web-undangan-digital.git" target="_blank">Source Code</a></i>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
               <img src="img/projects/Web Kopi.png" class="card-img-top" alt="Projects 4" />
-              <div class="card-body">
+              <div class="card-body text-center">
                 <p class="card-text">Website Coffee.</p>
+                <i class="bi bi-github"> <a href="https://github.com/abizars10/website-kopi-kenangan-senja.git" target="_blank">Source Code</a></i>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
               <img src="img/projects/Kalkulator Sederhana.png" class="card-img-top" alt="Projects 5" />
-              <div class="card-body">
+              <div class="card-body text-center">
                 <p class="card-text">Program Kalkulator Sederhana javascript.</p>
+                <i class="bi bi-github"> <a href="https://github.com/abizars10/kalkulator-dom.git" target="_blank">Source Code</a></i>
               </div>
             </div>
           </div>
