--- a/index.html
+++ b/index.html
@@ -95,8 +95,10 @@
             <div class="card">
               <img src="img/projects/Company Profile.png" class="card-img-top" alt="Projects 1" />
               <div class="card-body text-center">
-                <p class="card-text">Website Company Profile.</p>
-                <i class="bi bi-github"> <a href="https://github.com/abizars10/Abizars-Company.git" target="_blank">Source Code</a></i>
+                <p class="card-text">
+                  Website Company Profile. <br />
+                  <i class="bi bi-github"> <a href="https://github.com/abizars10/Abizars-Company.git" target="_blank">Source Code</a></i>
+                </p>
               </div>
             </div>
           </div>
@@ -104,8 +106,10 @@
             <div class="card">
               <img src="img/projects/Landing Page.png" class="card-img-top" alt="Projects 2" />
               <div class="card-body text-center">
-                <p class="card-text">Website Landing Page Sederhana.</p>
-                <i class="bi bi-github"> <a href="https://github.com/abizars10/Web-Landing.git" target="_blank">Source Code</a></i>
+                <p class="card-text">
+                  Website Landing Page. <br />
+                  <i class="bi bi-github"> <a href="https://github.com/abizars10/Web-Landing.git" target="_blank">Source Code</a></i>
+                </p>
               </div>
             </div>
           </div>
@@ -113,8 +117,10 @@
             <div class="card">
               <img src="img/projects/Undangan Digital.png" class="card-img-top" alt="Projects 3" />
               <div class="card-body text-center">
-                <p class="card-text">Website Undangan Pernikahan Digital.</p>
-                <i class="bi bi-github"> <a href="https://github.com/abizars10/web-undangan-digital.git" target="_blank">Source Code</a></i>
+                <p class="card-text">
+                  Website Undangan Pernikahan Digital. <br />
+                  <i class="bi bi-github"> <a href="https://github.com/abizars10/web-undangan-digital.git" target="_blank">Source Code</a></i>
+                </p>
               </div>
             </div>
           </div>
@@ -122,8 +128,10 @@
             <div class="card">
               <img src="img/projects/Web Kopi.png" class="card-img-top" alt="Projects 4" />
               <div class="card-body text-center">
-                <p class="card-text">Website Coffee.</p>
-                <i class="bi bi-github"> <a href="https://github.com/abizars10/website-kopi-kenangan-senja.git" target="_blank">Source Code</a></i>
+                <p class="card-text">
+                  Website Coffee shop. <br />
+                  <i class="bi bi-github"> <a href="https://github.com/abizars10/website-kopi-kenangan-senja.git" target="_blank">Source Code</a></i>
+                </p>
               </div>
             </div>
           </div>
@@ -131,8 +139,10 @@
             <div class="card">
               <img src="img/projects/Kalkulator Sederhana.png" class="card-img-top" alt="Projects 5" />
               <div class="card-body text-center">
-                <p class="card-text">Program Kalkulator Sederhana javascript.</p>
-                <i class="bi bi-github"> <a href="https://github.com/abizars10/kalkulator-dom.git" target="_blank">Source Code</a></i>
+                <p class="card-text">
+                  Program Kalkulator Sederhana javascript. <br />
+                  <i class="bi bi-github"> <a href="https://github.com/abizars10/kalkulator-dom.git" target="_blank">Source Code</a></i>
+                </p>
               </div>
             </div>
           </div>
