--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
     <!-- My CSS -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body id="home">
     <!-- Navbar -->
@@ -42,8 +44,8 @@
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
       <img src="img/abizar.png" alt="abizar" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4">Abizar Arrifa'i</h1>
-      <p class="lead">Frontend Developer | Junior Programmer</p>
+      <h1 class="display-4"></h1>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -59,15 +61,15 @@
       <div class="container">
         <!-- Content here -->
         <div class="row text-center mb-3">
-          <div class="col">
+          <div class="col" data-aos="zoom-in">
             <h2>About Me</h2>
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right">
             <p class="pKiri">Hallo. Saya merupakan lulusan S1 Teknik Informatika dari Universitas Pelita Bangsa Cikarang.</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left">
             <p class="pKanan">Saya seorang programmer yang berfokus pada pengembangan website menggunakan javascript dan typescript beserta library dan frameworknya.</p>
           </div>
         </div>
@@ -86,13 +88,13 @@
     <section id="projects">
       <div class="container">
         <div class="row text-center mb-3">
-          <div class="col">
+          <div class="col" data-aos="zoom-in">
             <h2>My Projects</h2>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="1500">
               <img src="img/projects/Company Profile.png" class="card-img-top" alt="Projects 1" />
               <div class="card-body text-center">
                 <p class="card-text">
@@ -103,7 +105,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="1500" data-aos-delay="100">
               <img src="img/projects/Landing Page.png" class="card-img-top" alt="Projects 2" />
               <div class="card-body text-center">
                 <p class="card-text">
@@ -114,7 +116,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="1500" data-aos-delay="200">
               <img src="img/projects/Undangan Digital.png" class="card-img-top" alt="Projects 3" />
               <div class="card-body text-center">
                 <p class="card-text">
@@ -125,7 +127,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="1500" data-aos-delay="300">
               <img src="img/projects/Web Kopi.png" class="card-img-top" alt="Projects 4" />
               <div class="card-body text-center">
                 <p class="card-text">
@@ -136,7 +138,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="1500" data-aos-delay="400">
               <img src="img/projects/Kalkulator Sederhana.png" class="card-img-top" alt="Projects 5" />
               <div class="card-body text-center">
                 <p class="card-text">
@@ -209,7 +211,28 @@
       <p>Created with <i class="bi bi-emoji-heart-eyes"></i> by <a href="https://www.instagram.com/abizars10/" class="text-black fw-bold">Abizar Arrifa'i</a></p>
     </footer>
     <!-- Akhir Footer -->
+    <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        once: true,
+        duration: 2000,
+      });
+    </script>
+
+    <!-- Gsap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(".display-4", { duration: 1.2, delay: 1, text: "Abizar Arrifa'i" });
+      gsap.to(".lead", { duration: 1.2, delay: 2, text: "Frontend Developer | Junior Programmer" });
+      gsap.from(".jumbotron img", { duration: 1, rotateY: 360, opacity: 0, ease: "bounce", delay: 0.5 });
+      gsap.from(".navbar", { duration: 1.5, y: "-100", opacity: 0 });
+    </script>
 
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbxowL8b1B7ZuydWR-xBt4G46dtD0zHUfu5VXKVD6hStjH_AnNDeieyW1krVfwrQN6W8Fg/exec";
