--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="container">
         <!-- Content here -->
         <div class="row text-center mb-3">
-          <div class="col" data-aos="zoom-in">
+          <div class="col" data-aos="fade-down">
             <h2>About Me</h2>
           </div>
         </div>
@@ -162,7 +162,7 @@
 
     <!-- Contact -->
     <section id="contact">
-      <div class="container">
+      <div class="container" data-aos="zoom-in">
         <div class="row text-center mb-3">
           <div class="col">
             <h2>Contact Me</h2>
@@ -214,7 +214,7 @@
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
-    <!-- AOS -->
+    <!-- Library AOS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({
@@ -223,7 +223,7 @@
       });
     </script>
 
-    <!-- Gsap -->
+    <!-- Library Gsap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
     <script>
