--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
           <div class="portfolio-layer">
             <h4>Todo List</h4>
-            <a href="portfolio/todoList/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
+            <a href="todoList/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
@@ -100,7 +100,7 @@
 
           <div class="portfolio-layer">
             <h4>Company Profile</h4>
-            <a href="portfolio/Abizars-Company/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
+            <a href="Abizars-Company/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
@@ -116,7 +116,7 @@
 
           <div class="portfolio-layer">
             <h4>DB Movies</h4>
-            <a href="portfolio/movieDB/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
+            <a href="movieDB/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
@@ -124,7 +124,7 @@
 
           <div class="portfolio-layer">
             <h4>Landing Page</h4>
-            <a href="portfolio/Web-Landing/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
+            <a href="Web-Landing/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
         <div class="portfolio-box">
@@ -132,7 +132,7 @@
 
           <div class="portfolio-layer">
             <h4>Coffee Kenangan Senja</h4>
-            <a href="portfolio/website-kopi-kenangan-senja/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
+            <a href="website-kopi-kenangan-senja/index.html" target="_blank"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
       </div>
